# singe

./: .gitmodules  README.md  UMDEPMAP.yaml  justfile  meson.build
glue/: tests.cpp  tests.hpp  wayland.cpp  wayland.hpp
glue/client/: tests.cpp  tests.hpp  wayland.cpp  wayland.hpp
glue/stable/linux-dmabuf/: linux-dmabuf-v1.cpp  linux-dmabuf-v1.hpp
glue/stable/presentation-time/: presentation-time.cpp  presentation-time.hpp
glue/stable/tablet/: tablet-v2.cpp  tablet-v2.hpp
glue/stable/viewporter/: viewporter.cpp  viewporter.hpp
glue/stable/xdg-shell/: xdg-shell.cpp  xdg-shell.hpp
glue/staging/alpha-modifier/: alpha-modifier-v1.cpp  alpha-modifier-v1.hpp
glue/staging/color-management/: color-management-v1.cpp  color-management-v1.hpp
glue/staging/color-representation/: color-representation-v1.cpp  color-representation-v1.hpp
glue/staging/commit-timing/: commit-timing-v1.cpp  commit-timing-v1.hpp
glue/staging/content-type/: content-type-v1.cpp  content-type-v1.hpp
glue/staging/cursor-shape/: cursor-shape-v1.cpp  cursor-shape-v1.hpp
glue/staging/drm-lease/: drm-lease-v1.cpp  drm-lease-v1.hpp
glue/staging/ext-background-effect/: ext-background-effect-v1.cpp  ext-background-effect-v1.hpp
glue/staging/ext-data-control/: ext-data-control-v1.cpp  ext-data-control-v1.hpp
glue/staging/ext-foreign-toplevel-list/: ext-foreign-toplevel-list-v1.cpp  ext-foreign-toplevel-list-v1.hpp
glue/staging/ext-idle-notify/: ext-idle-notify-v1.cpp  ext-idle-notify-v1.hpp
glue/staging/ext-session-lock/: ext-session-lock-v1.cpp  (+1 more)
scripts/: loopy.sh  protocolgen.py
(+190 files in other folders)
